--- a/templates/show_others_data.html
+++ b/templates/show_others_data.html
@@ -21,19 +21,9 @@
                     <span class="tag is-dark">상태</span>                                    
                     {% if item.location == "undefined" %}
                         <span class="tag is-info">미정</span>
-                    {% elif item.location == "classroom" %}
-                        <span class="tag is-info">강의실</span>
-                    {% elif item.location == "dormitory" %}
-                        <span class="tag is-info">기숙사</span>
-                    {% elif item.location == "restaurant" %}
-                        <span class="tag is-info">식당</span>
-                    {% elif item.location == "laundry_room" %}
-                        <span class="tag is-info">세탁실</span>
-                    {% elif item.location == "out" %}
-                        <span class="tag is-info">외출중</span>
-                    {% elif item.location == "lounge" %}
-                        <span class="tag is-info">라운지</span>
-                    {% endif %}                        
+                    {% else %}
+                        <span class = "tag is-info">{{item.location}}</span>
+                    {% endif %}                   
                 </div>
             </div>
         </div>
